# scraping

./: authors.json  main.py  pyproject.toml  send_to_db.py
scraping_url/: scrapy.cfg
scraping_url/scraping_url/: items.py  middlewares.py  pipelines.py  settings.py
